--- a/source_codes/module_5/8.behaviorparameterization.md
+++ b/source_codes/module_5/8.behaviorparameterization.md
@@ -37,7 +37,7 @@ class EmployeeFilterByCountry implements EmployeePredicate {
 ````
 
 ````java
-public class LambdaExample {
+public class BehaviorParametrization {
     public static void main(String[] args) throws Exception {
         List<Employee> empList = List.of(
                 new Employee("Javohir Elmurodov", "UZB", "SOFTWARE ENGINEER", 28),
