9.functionalinterface.md file added

--- a/source_codes/module_5/9.functionalinterfaces.md
+++ b/source_codes/module_5/9.functionalinterfaces.md
@@ -1,3 +1,49 @@
+# Predicate
+````java
+public class PredicateTest {
+    public static void main(String[] args) {
+        Predicate<Integer> evenNums = (num -> num % 2 == 0);
+        Predicate<Integer> oddNums = (num -> num % 2 != 0);
+        Predicate<Integer> positiveNums = ( num -> num > 0);
+        int[] array = { 5, 4, 8, -3, -4, 10 };
+        System.out.println(filter(array, evenNums));
+        System.out.println(filter(array, oddNums));
+        System.out.println(filter(array, positiveNums));
+    }
+    public static List<Integer> filter(int[] array, Predicate<Integer> predicate) {
+        List<Integer> result = new ArrayList<>();
+        for (int t : array) {
+            if (predicate.test(t))
+                result.add(t);
+        }
+        return result;
+    }
+}
+````
+# Consumer
+````java
+public class ConsumerTest {
+    public static void main(String[] args) {
+        Consumer<Employee> printOnConsole = ( e -> System.out.print(e) );
+        Consumer<Employee> storeInDB = ( e -> DaoUtil.save(e) );
+
+        forEach(empList, printOnConsole);
+        forEach(empList, storeInDB);
+        forEach(empList, printOnConsole.andThen(storeInDB));
+    }
+    static <T> void forEach(List<T> list, Consumer<T> consumer) {
+        int nullCount = 0;
+        for ( T t : list ) {
+            if ( t != null ) {
+                consumer.accept(t);
+            } else {
+                nullCount++;
+            }
+        }
+        System.out.printf("%d null entries count  in the list.\n", nullCount);
+    }
+}
+````
 
 ````java
 
