ignore file added

--- a/source_codes/module_5/9.functionalinterfaces.md
+++ b/source_codes/module_5/9.functionalinterfaces.md
@@ -1,26 +1,38 @@
 # Predicate
+
+<details>
+<summary>Predicate Example Code</summary>
+
 ````java
 public class PredicateTest {
     public static void main(String[] args) {
-        Predicate<Integer> evenNums = (num -> num % 2 == 0);
-        Predicate<Integer> oddNums = (num -> num % 2 != 0);
-        Predicate<Integer> positiveNums = ( num -> num > 0);
-        int[] array = { 5, 4, 8, -3, -4, 10 };
+        Predicate<Integer> evenNums = ( num -> num % 2 == 0 );
+        Predicate<Integer> oddNums = ( num -> num % 2 != 0 );
+        Predicate<Integer> positiveNums = ( num -> num > 0 );
+        int[] array = {5, 4, 8, -3, -4, 10};
         System.out.println(filter(array, evenNums));
         System.out.println(filter(array, oddNums));
         System.out.println(filter(array, positiveNums));
     }
+
     public static List<Integer> filter(int[] array, Predicate<Integer> predicate) {
         List<Integer> result = new ArrayList<>();
-        for (int t : array) {
-            if (predicate.test(t))
+        for ( int t : array ) {
+            if ( predicate.test(t) )
                 result.add(t);
         }
         return result;
     }
 }
 ````
+
+</details>
+
 # Consumer
+
+<details>
+<summary>Consumer Example Code</summary>
+
 ````java
 public class ConsumerTest {
     public static void main(String[] args) {
@@ -31,6 +43,7 @@ public class ConsumerTest {
         forEach(empList, storeInDB);
         forEach(empList, printOnConsole.andThen(storeInDB));
     }
+
     static <T> void forEach(List<T> list, Consumer<T> consumer) {
         int nullCount = 0;
         for ( T t : list ) {
@@ -44,9 +57,13 @@ public class ConsumerTest {
     }
 }
 ````
+</details>
+
+# Primitive FunctionalInterface
+<details>
+<summary>Primitive FunctionalInterface</summary>
 
 ````java
-
 class PrimitiveFunctionalInterface {
 
     public static void main(String[] args) {
@@ -77,14 +94,14 @@ class PrimitiveFunctionalInterface {
 ````
 
 ````java
-
 public class RunningTime {
-    public static void calculate(Consumer<Void> consumer){
+    public static void calculate(Consumer<Void> consumer) {
         long begin = System.currentTimeMillis();
         consumer.accept(null);
         long end = System.currentTimeMillis();
-        System.out.println(end-begin);
+        System.out.println(end - begin);
     }
 }
 
 ````
+</details>
