ignore file added

--- a/source_codes/module_5/9.functionalinterfaces.md
+++ b/source_codes/module_5/9.functionalinterfaces.md
@@ -1,7 +1,5 @@
 # Predicate
 
-<details>
-<summary>Predicate Example Code</summary>
 
 ````java
 public class PredicateTest {
@@ -26,12 +24,7 @@ public class PredicateTest {
 }
 ````
 
-</details>
-
 # Consumer
-
-<details>
-<summary>Consumer Example Code</summary>
 
 ````java
 public class ConsumerTest {
@@ -57,14 +50,62 @@ public class ConsumerTest {
     }
 }
 ````
-</details>
 
-# Primitive FunctionalInterface
-<details>
-<summary>Primitive FunctionalInterface</summary>
+# Function
 
 ````java
-class PrimitiveFunctionalInterface {
+public class FunctionTest {
+
+    public static void main(String[] args) {
+        Function<Employee, String> empPrimaryId = ( emp -> emp.getEmployeeId() );
+        Function<Department, String> deptPrimaryId = ( dept -> dept.getLocation() + dept.getName() );
+
+        toMap(employeeList, empPrimaryId);
+        toMap(deptList, deptPrimaryId);
+    }
+
+    static <T, K> Map<K, T> toMap(List<T> list, Function<T, K> keyMapper) {
+        Map<K, T> map = new HashMap<>();
+        for ( T t : list ) {
+            map.put(keyMapper.apply(t), t);
+        }
+        return map;
+    }
+}
+````
+
+# Supplier
+
+````java
+public class SupplierTest {
+
+    public static void main(String[] args) {
+        Supplier<Long> randomId = () -> new Random().nextLong();
+        Supplier<UUID> uuid = () -> UUID.randomUUID();
+
+        Trade trade = new Trade();
+        populate(trade, randomId);
+        populate(trade, uuid);
+    }
+
+    static <R> void populate(Trade t, Supplier<R> supplier) {
+        t.tradeDate = new Date();
+        t.tradeId = (String) supplier.get();
+        t.location = "XYZ Hub";
+    }
+
+    static class Trade {
+        String tradeId;
+        Date tradeDate;
+        String location;
+    }
+}
+````
+
+# Primitive FunctionalInterface
+
+````java
+public class PrimitiveFunctionalInterface {
 
     public static void main(String[] args) {
         int[] arr = IntStream.range(1, 500000).toArray();
@@ -104,4 +145,3 @@ public class RunningTime {
 }
 
 ````
-</details>
