ignore file added

--- a/source_codes/module_5/11.stream_api.md
+++ b/source_codes/module_5/11.stream_api.md
@@ -1,20 +1,10 @@
 ### We will Need Some Faker Data
 
-download [sds](seeder.java) and run below command
+download [seeder.jar](https://github.com/jlkesh/pdp_online_java_lessons/raw/main/jars/seeder.jar) and run below command to generate some random data
 
 ```shell
 java -jar seeder.jar
 ```
-### Stream Support For User defined classes
 
-```java
-public static class Item {
-    UUID id = UUID.randomUUID();
-    LocalDate localDate = LocalDate.now();
+or you can download some already generated data [here](https://github.com/jlkesh/pdp_online_java_lessons/raw/main/jars/employees.json)
 
-    public Stream<Object> stream() {
-        Spliterator<Object> spliterator = Spliterators.spliterator(new Object[]{id, localDate}, Spliterator.SIZED);
-        return StreamSupport.stream(spliterator, false);
-    }
-}
-```
