new interview questions added

--- a/source_codes/module_5/18.annotations.md
+++ b/source_codes/module_5/18.annotations.md
@@ -33,3 +33,77 @@ public class Machine<T> {
     }
 }
 ````
+
+````java
+import java.lang.reflect.Method;
+
+
+public class Main {
+
+    @MyAnnotation
+    private String field;
+
+    @MyAnnotation
+    public void hello() {
+        System.out.println("Hello PDP!");
+    }
+
+    public static void main(String[] args) throws Exception {
+        /*System.out.println(Main.class.isAnnotationPresent(MyAnnotation.class));*/
+        UserDAO userDAO = new UserDAO();
+        Method method = userDAO.getClass().getDeclaredMethod("save", Object.class);
+        DataBaseProperty annotation = method.getAnnotation(DataBaseProperty.class);
+        String url = annotation.url();
+        String username = annotation.username();
+        String password = annotation.password();
+        System.out.printf("Connecting Database with url : %s\ncredentials %s:%s%n", url, username, password);
+        method.invoke(userDAO, new Object());
+    }
+}
+````
+
+
+````java
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+@Retention(RetentionPolicy.RUNTIME)
+@Target({ElementType.TYPE, ElementType.FIELD,ElementType.METHOD})
+public @interface MyAnnotation {
+
+}
+````
+
+
+````java
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+public @interface DataBaseProperty {
+
+    String url() default "jdbc:postgresql://localhost:5432/postgres";
+
+    String username() default "postgres";
+
+    String password();
+
+}
+````
+
+
+````java
+public class UserDAO {
+
+    @DataBaseProperty(password = "123", username = "pdp")
+    public void save(Object object) {
+        System.out.println("Saving To Database.....");
+    }
+}
+````
+
